tests/lexer/invalid/test_unterminated_comment.src
int x = 42;
/* This comment never ends
int y = 100;
/* Nested /* comment */
unterminated